[Feature] new env

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,19 @@
-spring.application.name=spring-boot-template
-server.port=8080
+spring.config.import=optional:file:.env[.properties]
 
+spring.application.name=${APP_NAME}
+server.port=${SERVER_PORT}
 
 # Configuración de la base de datos PostgreSQL
-spring.datasource.url=jdbc:postgresql://localhost:5432/db_erp
-spring.datasource.username=postgres
-spring.datasource.password=postgres
-spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
+spring.datasource.driver-class-name=${DB_DRIVER}
 # docker run --name ERP -e POSTGRES_USER=postgres -e POSTGRES_PASSWORD=postgres -e POSTGRES_DB=db_erp -p 5432:5432 -d postgres
 
 # Configuración de JPA/Hibernate
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.ddl-auto=${JPA_DDL_AUTO}
+spring.jpa.show-sql=${JPA_SHOW_SQL}
+spring.jpa.properties.hibernate.format_sql=${JPA_FORMAT_SQL}
 
-spring.jpa.open-in-view=false
+spring.jpa.open-in-view=${JPA_OPEN_IN_VIEW}
